Fatorada método cadastro